Fixed height/width and z-index issues.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -178,7 +178,7 @@ Main components
 	position: fixed;
 	top: 0;
 	left: 0;
-	z-index: 3;
+	z-index: 30000;
 	width: 100%;
 	height: 100%;
 	overflow-y: auto; 
